--- a/_mockUp/src/styl/ITCSS/settings/_settings.default.styl
+++ b/_mockUp/src/styl/ITCSS/settings/_settings.default.styl
@@ -12,12 +12,12 @@
 
 // Font settings.
 wf_font-size                    =    16px
-wf_line-height                  =    20px
+wf_line-height                  =    24px
 wf_space-unit                   =    wf_font-size
-wf_font-labeur                  =    "RobotoLabeur", sans-serif
+wf_font-labeur                  =    "Roboto", sans-serif
 wf_font-bold                    =    "RobotoBold", sans-serif
 wf_font-nav                     =    "RobotoNav", sans-serif
-wf_font-heading                 =    "RobotoHeading", sans-serif
+wf_font-heading                 =    "Roboto", sans-serif
 wf_font-quote                   =    "RochterQuote", sans-serif
 
 // Text colors.
