--- a/_mockUp/src/styl/ITCSS/settings/_settings.font-face.styl
+++ b/_mockUp/src/styl/ITCSS/settings/_settings.font-face.styl
@@ -16,7 +16,7 @@
     src: url( "fonts/Rochter/Rochester-Regular.otf" )
 
 @font-face
-    font-family: "RobotoLabeur"
+    font-family: "Roboto"
     src: url( "fonts/Roboto/Roboto-Light.ttf" )
 
 @font-face
@@ -26,7 +26,3 @@
 @font-face
     font-family: "RobotoNav"
     src: url( "fonts/Roboto/Roboto-Regular.ttf" )
-
-@font-face
-    font-family: "RobotoHeading"
-    src: url( "fonts/Roboto/Roboto-Thin.ttf" )
