--- a/_mockUp/src/styl/main.styl
+++ b/_mockUp/src/styl/main.styl
@@ -15,6 +15,7 @@
 @import "ITCSS/generic/_generic.box-sizing.styl"
 
 // - Base
+@import "ITCSS/base/_base.forms.styl"
 @import "ITCSS/base/_base.link.styl"
 @import "ITCSS/base/_base.paragraph.styl"
 @import "ITCSS/base/_base.page.styl"
