--- a/_mockUp/src/jade/main.jade
+++ b/_mockUp/src/jade/main.jade
@@ -16,9 +16,10 @@ block header
 block content
     div(itemscope itemtype="http://schema.org/Thing").parallax__img.position--relative.parallax__img--one
         blockquote(itemprop="description").quote
-            | Ne manquez pas notre prochain
-            a(itemprop="url" href="evenements.html").span--spacing.quote__link Rendez-vous
+            | Ne manquez pas notre prochain 
+            a(itemprop="url" href="html/evenements.html").quote__link Rendez-vous 
             | dans la région de Liège, à Seraing
+            
     section(itemscope itemtype="http://schema.org/Thing").parallax__body
         h2(itemprop="headline").gamma Bienvenue au Resto-Rallye
         p(itemprop="description") Le Resto Rallye est un itinéraire gourmand en trois restaurants, pourquoi toujours se limiter à un seul restaurant pour déguster l’entièreté d’un menu ?
