--- a/_mockUp/src/styl/ITCSS/base/_base.forms.styl
+++ b/_mockUp/src/styl/ITCSS/base/_base.forms.styl
@@ -12,6 +12,8 @@
 
 // Add font to my input
 input, textarea
+    max-width 100%
+    max-height 100%
     font-family wf_font-labeur
     rem-fallback( font-size, 16px )
 
