--- a/_mockUp/src/styl/ITCSS/settings/_settings.default.styl
+++ b/_mockUp/src/styl/ITCSS/settings/_settings.default.styl
@@ -21,11 +21,11 @@ wf_font-heading                 =    "Roboto", sans-serif
 wf_font-quote                   =    "RochterQuote", sans-serif
 
 // Text colors.
-wf_labeur-color                 =    #5b6464
-wf_heading-color                =    #545d5d
+wf_labeur-color                 =    #404646
+wf_heading-color                =    #363b3b
 wf_nav-color                    =    #ffffff
 wf_link-color                   =    #3498db
-wf_link-color-hover             =    #90b4c5
+wf_link-color-hover             =    #6f909d
 wf_quote-color                  =    #eaeaea
 wf_error-color                  =    #c0392b
 wf_asterisque                   =    #3498db
@@ -38,7 +38,7 @@ wf_background-thumbnails        =    #f5f5f5
 wf_background-pagination        =    #f5f5f5
 wf_background-pagination-hover  =    #fafafa
 wf_background-submit            =    #3498db
-wf_background-submit-hover      =    #6db1d8
+wf_background-submit-hover      =    #6f909d
 
 // Border colors
 wf_border-menu                  =    #fbfbfb
