--- a/_mockUp/src/styl/ITCSS/components/_components.forms.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.forms.styl
@@ -18,8 +18,8 @@
     rem-fallback( width, 25px )
     rem-fallback( height, 25px )
     background: url("images/links/sprite.png") -90px -10px
-    rem-fallback( top, 12px )
-    rem-fallback( right, 5px )
+    top 10%
+    right 5%
     border none
     rem-fallback( text-indent, -1000000px )
     &:hover
@@ -44,8 +44,8 @@
     rem-fallback( width, 25px )
     rem-fallback( height, 25px )
     background: url("images/links/sprite.png") -120px -10px
-    rem-fallback( top, 12px )
-    rem-fallback( right, 8px )
+    top 20%
+    right 5%
     border none
     rem-fallback( text-indent, -1000000px )
 
