--- a/_mockUp/src/jade/includes/header.jade
+++ b/_mockUp/src/jade/includes/header.jade
@@ -11,7 +11,7 @@ header(itemscope itemtype="http://schema.org/WPHeader").header
                     input(id="login" type="text" placeholder="john.doe@gmail.com").input__text
                 div.inline-block.login__element
                     label(for="pwd").hightlight.login__label Mot de passe
-                    input(id="pwd" type="text" placeholder="*********").input__text
+                    input(id="pwd" type="password" placeholder="*********").input__text
                 div.inline-block.login__element
                     p.login__log
                         if current.main
