--- a/_mockUp/src/styl/ITCSS/components/_components.specifics.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.specifics.styl
@@ -37,6 +37,7 @@
     +media-query( screen, max-width 960px )
         rem-fallback( width, 400px )
         rem-fallback( font-size, 32px )
+        rem-fallback( top, -104px )
     +media-query( screen, max-width 490px )
         rem-fallback( width, 200px )
         rem-fallback( font-size, 24px )
