--- a/_mockUp/src/styl/ITCSS/base/_base.forms.styl
+++ b/_mockUp/src/styl/ITCSS/base/_base.forms.styl
@@ -10,7 +10,7 @@
 
 
 
-// Add font to my input
+// Add font to my input and widths
 input, textarea
     max-width 100%
     max-height 100%
@@ -23,3 +23,23 @@ input[type="submit"]
 
     +media-query( screen, max-width 960px )
         rem-fallback( font-size, 16px )
+
+//Change color of placehoder for FireFox
+input:-moz-placeholder
+    color wf_form-placeholder-color
+textarea:-moz-placeholder
+    color wf_form-placeholder-color
+input::-moz-placeholder
+    color wf_form-placeholder-color
+textarea::-moz-placeholder
+    color wf_form-placeholder-color
+//Change color of placehoder for Chrome and Opera
+input::-webkit-input-placeholder
+    color wf_form-placeholder-color
+textarea::-webkit-input-placeholder
+    color wf_form-placeholder-color
+//Change color of placehoder for IE
+input:-ms-input-placeholder
+    color wf_form-placeholder-color
+textarea:-ms-input-placeholder
+    color wf_form-placeholder-color
