--- a/_mockUp/src/styl/ITCSS/settings/_settings.default.styl
+++ b/_mockUp/src/styl/ITCSS/settings/_settings.default.styl
@@ -34,9 +34,7 @@ wf_asterisque                   =    #3498db
 wf_background-header            =    #3498db
 wf_background-parallax          =    #ffffff
 wf_background-footer            =    #ffffff
-wf_background-thumbnails        =    #f5f5f5
-wf_background-pagination        =    #f5f5f5
-wf_background-pagination-hover  =    #fafafa
+wf_background-thumbnails        =    #d0d0d0
 wf_background-submit            =    #3498db
 wf_background-submit-hover      =    #6f909d
 
@@ -46,5 +44,6 @@ wf_border-error                 =    #c0392b
 wf_border-error-opacity         =    rgba(194, 47, 43, 0)
 
 // Forms settings
-wf_form-background-color        =    #f5f5f5
-wf_form-background-color-focus  =    #fafafa
+wf_form-placeholder-color       =    #8e8e8e
+wf_form-background-color        =    #e5e5e5
+wf_form-background-color-focus  =    #f5f5f5
