Change forms style

--- a/_mockUp/src/styl/ITCSS/components/_components.forms.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.forms.styl
@@ -77,7 +77,7 @@
     width 100%
     background-color wf_form-background-color
     rem-fallback( padding, 12px 24px )
-    border none
+    border 1px solid wf_border-forms 
     &:focus
         background-color wf_form-background-color-focus
 .input__submit
