--- a/_mockUp/src/styl/ITCSS/settings/_settings.default.styl
+++ b/_mockUp/src/styl/ITCSS/settings/_settings.default.styl
@@ -39,11 +39,12 @@ wf_background-submit            =    #3498db
 wf_background-submit-hover      =    #6f909d
 
 // Border colors
+wf_border-forms                 =    #aaaaaa
 wf_border-menu                  =    #fbfbfb
 wf_border-error                 =    #c0392b
 wf_border-error-opacity         =    rgba(194, 47, 43, 0)
 
 // Forms settings
 wf_form-placeholder-color       =    #8e8e8e
-wf_form-background-color        =    #e5e5e5
-wf_form-background-color-focus  =    #f5f5f5
+wf_form-background-color        =    #ffffff
+wf_form-background-color-focus  =    #fafafa
