--- a/_mockUp/src/styl/ITCSS/settings/_settings.default.styl
+++ b/_mockUp/src/styl/ITCSS/settings/_settings.default.styl
@@ -37,6 +37,8 @@ wf_background-footer            =    #ffffff
 wf_background-thumbnails        =    #d0d0d0
 wf_background-submit            =    #3498db
 wf_background-submit-hover      =    #6f909d
+wf_background-anchor            =    #3498db
+wf_background-anchor-hover      =    #6f909d
 
 // Border colors
 wf_border-forms                 =    #aaaaaa
