--- a/_mockUp/src/styl/main.styl
+++ b/_mockUp/src/styl/main.styl
@@ -41,6 +41,7 @@
 @import "ITCSS/components/_components.restaurant.styl"
 @import "ITCSS/components/_components.gallery.styl"
 @import "ITCSS/components/_components.pagination.styl"
+@import "ITCSS/components/_components.anchor.styl"
 
 // - Trumps
 @import "ITCSS/trumps/_trumps.position.styl"
