--- a/_mockUp/src/jade/main.jade
+++ b/_mockUp/src/jade/main.jade
@@ -7,7 +7,7 @@ block title
     title Resto Rallye - Accueil
 
 block style
-    link(rel="stylesheet" href="css/main.css")
+    link(rel="stylesheet" href="css/main-min.css")
 
 block header
     - var current = { main: 'index' }
@@ -84,4 +84,4 @@ block script
     script(src="js/vendor/modernizr-2.6.2.min.js")
     script(src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDHJ3p-sn1Y5tJGrzH9MF5cbR5sdsDmhfg&sensor=false")
     script(src="js/vendor/jquery.js")
-    script(src="js/script.js")
+    script(src="js/script-min.js")
