--- a/_mockUp/src/jade/includes/layout.jade
+++ b/_mockUp/src/jade/includes/layout.jade
@@ -13,6 +13,7 @@ head
     link(rel="icon" type="image/png" href="https://fbcdn-sphotos-f-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/1380208_592665394124970_2094187523_n.jpg?oh=ed605aceb5982052cabdefe4d0210a2f&oe=55212669&__gda__=1429869376_455ac9845e14130176bc81964d126410")
     block style
         link(rel="stylesheet" href="../css/main-min.css")
+    script(src="../js/vendor/modernizr-2.6.2.min.js")
 
 body    
     block header
