--- a/_mockUp/src/jade/evenement.jade
+++ b/_mockUp/src/jade/evenement.jade
@@ -6,7 +6,7 @@ block title
     title Resto Rallye - Événement
 
 block style
-    link(rel="stylesheet" href="../css/main.css")
+    link(rel="stylesheet" href="../css/main-min.css")
     link(rel="stylesheet" href="../css/fresco/fresco.css")
 
 block header
@@ -58,7 +58,7 @@ block content
                 span.inline-block.pagination__element
                     a(href="#").block.removeLink.pagination__element--links &lang;&lang;
                 span.inline-block.pagination__element
-                    a(href="#").block.pagination__element--links 1
+                    a(href="#").block.pagination__element--current 1
                 span.inline-block.pagination__element
                     a(href="#").block.pagination__element--links 2
                 span.inline-block.pagination__element
@@ -77,7 +77,6 @@ block script
         var addressRdv = "Rue Rogier 80, 5000 Namur, Belgique"
         var addressRsts = ["Rue des Brasseurs 40, 5000 Namur, Belgique", "Rue de Bruxelles 10, 5000 Namur, Belgique", "Boulevard d'Herbatte 30, 5000 Namur, Belgique"]
 
-    script(src="../js/vendor/modernizr-2.6.2.min.js")
     script(src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDHJ3p-sn1Y5tJGrzH9MF5cbR5sdsDmhfg&sensor=false")
     script(src="../js/vendor/jquery.js")
     script(src="../js/script-min.js")
